traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:39: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalDiagonal:42: error: expected start of definition
	override def forward()  {
                 ^TraversalDiagonal:45: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalDiagonal:48: error: expected start of definition
	override def backward() {
                 ^TraversalDiagonal:51: error: Unmatched closing brace '}' ignored here
}
^